test/bad/10-arr-acc-lt-zero.mac



int main() {
    int[] a = new int[5];
    int b = a[-1];
    return 0;
}